# DataContractsODCS

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
contracts/content/v1/: datacontract.odcs.yaml
contracts/content/v2/: datacontract.odcs.yaml
contracts/listeners/v1/: inbound.odcs.yaml  outbound.odcs.yaml
contracts/playback/v1/: datacontract.odcs.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/content/: _models.yml  dim_tracks.sql
dbt/models/marts/listeners/: _models.yml  dim_listeners.sql
dbt/models/marts/playback/: _models.yml  fct_play_events.sql
dbt/models/sources/content/: sources.yml
dbt/models/sources/listeners/: sources.yml
dbt/models/sources/playback/: sources.yml
dbt/models/staging/content/: stg_albums.sql  stg_artists.sql  stg_tracks.sql
dbt/models/staging/listeners/: stg_listeners.sql  stg_subscriptions.sql
dbt/models/staging/playback/: stg_play_events.sql  stg_playlist_tracks.sql
dbt/seeds/: albums.csv  artists.csv  listeners.csv  play_events.csv  playlist_tracks.csv  subscriptions.csv  tracks.csv
scripts/: check_breaking_changes.py  refresh_exports.py  run_pipeline.py
soda/: configuration.yml
soda/checks/: content.yml  listeners.yml  playback.yml
