[project]
name = "open-data-contracts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "charset-normalizer>=3.4.7",
    "openpyxl>=3.1.0",
    "datacontract-cli[duckdb]>=0.11.8",
    "dbt-core>=1.11.6",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.0.0",
    "orjson>=3.11.8",
    "pre-commit>=4.5.1",
    "soda-core-duckdb>=3.5.6",
]
